# plantmind_build

./: .env.example  .gitignore  00-START-HERE.md  AGENTS.md  AI-OPERATING-SYSTEM.md  CLAUDE.md  CLAUDE_RULES.md  CODEX.md  CONTRIBUTING.md  GEMINI.md  LOCKED_STATE.md  MIGRATION-MAP.md  PROJECT-DNA.md  README.md  ROADMAP.md  plant-config.yaml  pyproject.toml
.claude-continuity/: STATE.json
.github/: pull_request_template.md
Chat Context/: 2026-06-29_v1.0_project-context.md  2026-06-29_v1.1_project-context.md  2026-06-30_v1.2_project-context.md  2026-06-30_v1.4_project-context.md  2026-06-30_v1.7_project-context.md  2026-07-01_v2.0_project-context.md
config/: plant_config.yaml
continuity/: STATE.json  generated-test-cases.json  goal-log.json  test-log.json
docs/: 00-MASTER-SPEC.md  CODEBASE-INVENTORY.md  CONFLICT-RESOLUTION.md  CONSOLIDATED-PROJECT-BLUEPRINT.md  IMPLEMENTATION-GUIDE-ULTRA.md  INDEX.md  WIN-STRATEGY-ASSESSMENT.md
ml/: README.md  __init__.py
ops/: CLI-PARITY.md  CLI-REGISTRY.md  MODEL-REGISTRY.md  NAMING-CONVENTIONS.md  OPERATIONS-MANUAL.md  PROJECT_CUSTOM_INSTRUCTION.md  ROUTING.md  TEAM-OPERATIONS-PLAYBOOK.md
plantmind_build.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check-status.ps1  export-to-drive.ps1  gen-project-spec-pdf.py  gen_team_docs.py  generate-handover-docs.py  generate-ultra-team-doc.py  generate_handover_docs.py  generate_ultra_team_doc.py  git-sync.ps1  run-tests.ps1  smoke-test.py  start-session.ps1  sync-notion-drive.ps1  sync-team-share-drive.ps1  upload_to_drive.py
src/: README.md  __init__.py
(+277 files in other folders)
